# ai-stock

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_bars_daily_hfq_jobs.py  0003_bars_price_hfq_numeric.py  0004_calendar_events.py  0005_strategy_lifecycle.py  0006_financial_snapshots.py  0007_lhb_daily_pct_chg.py  0008_ml_models_as_factor.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
docs/: TODO.md  architecture.md  hard-rules.md  product-design-draft.html  v1.md
scripts/: dev.ps1  dev.py  ensure_strategy_lifecycle_columns.py  export_market_data.py  import_market_data.py  market_data_io.py  reset_db_schema.py  smoke_mock.ps1
tests/: conftest.py  test_ai_tools_session.py  test_akshare_capital.py  test_akshare_daily_scope.py  test_ashare_commission.py  test_auction_ingest.py  test_backtest_report.py  test_calendar_events.py  test_core.py  test_em_boards.py  test_factor_registry.py  test_factor_rules.py  test_factor_rules_ml.py  test_factor_series.py  test_financials.py  test_indicators_extra.py  test_lhb_ingest.py  test_market_data_io.py  test_market_pipeline_acceptance.py  test_market_pipeline_api.py  test_market_pipeline_backfill.py  test_market_pipeline_calendar.py  test_market_pipeline_config.py  test_market_pipeline_delist.py  test_market_pipeline_feed.py  test_market_pipeline_jobs.py  test_market_pipeline_minute.py  test_market_pipeline_models.py  test_market_pipeline_qmt_md.py  test_market_pipeline_scheduler.py  test_market_pipeline_upsert.py  test_market_pipeline_xtdata_instruments.py  test_migrated_strategies.py  test_ml_model_as_factor.py  test_ml_train_symbols.py  test_morning_bind_and_quality.py  test_paper_runner.py  test_paper_trading_cost.py  test_promotion_gate.py  test_qmt_md_auction_minute.py  (+14 more)
(+122 files in other folders)
